--- a/tools.html
+++ b/tools.html
@@ -10,6 +10,7 @@ layout: default
                 <li><a href="geojsontocsv/">GeoJSON to DSV</a>: convert a GeoJSON in CSV/TSV</li>
                 <li><a href="findcoords/">Find Coordinates</a>: just click to see the coordinates</li>
                 <li><a href="tilecalc/">Tiles Calculator</a>: switch between coordinates and tilenames</li>
+                <li><a href="parsecoords/">Bulk coordinate parser</a>: convert from sexagesimal to DMS</li>
                 <li><a href="geoedit/">GeoJSON editor</a>: a simple editor for GeoJSON tables</li>
             </ul>
         </div>
