--- a/tools/parsecoords.html
+++ b/tools/parsecoords.html
@@ -2,6 +2,7 @@
 title: Coordinate Conversion
 layout: default
 ---
+<script src='{{site.baseurl}}/js/sexagesimal.js'></script>
 <style>
 </style>
 <div class="row">
