--- a/tools/findcoords.html
+++ b/tools/findcoords.html
@@ -91,7 +91,7 @@ function writeCoord(e){
     var osmTile= L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
-     var realVista = L.tileLayer.wms("http://213.215.135.196/reflector/open/service?", {
+    var realVista = L.tileLayer.wms("http://213.215.135.196/reflector/open/service?", {
 		    layers: 'rv1',
 		    format: 'image/jpeg',attribution: 'RealVista1.0 WMS OPEN di <a href="http://www.realvista.it">e-GEOS SpA</a>'
 	    });
@@ -104,7 +104,7 @@ function writeCoord(e){
 
     map.on('click', writeCoord);
 
-	map.addControl( new L.Control.Search({
+    var searchControl = new L.Control.Search({
 			url: 'http://nominatim.openstreetmap.org/search?format=json&q={s}',
 			jsonpParam: 'json_callback',
 			propertyName: 'display_name',
@@ -115,5 +115,9 @@ function writeCoord(e){
 			autoCollapse: true,
 			minLength: 3,
 			zoom:15
-		}) );
+		});
+	searchControl.on('search:locationfound', function(e) {
+        writeCoord(e);
+	});
+	map.addControl( searchControl );
 </script>
